--- a/styles3.css
+++ b/styles3.css
@@ -279,7 +279,7 @@ nav{
 @media  (min-width: 992px)   {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
       /*border: 2px solid black;*/
-    background-color: lightgray;
+    background-color: gray;
  
   }
   .col-md-1 {
@@ -324,7 +324,7 @@ nav{
 @media  (min-width: 768px) and (max-width: 992px)  {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
       /*border: 2px solid black;*/
-    background-color: lightgray;
+    background-color: gray;
      
   }
   .col-sm-1 {
@@ -369,7 +369,7 @@ nav{
 @media  (max-width: 768px)  {
   .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
       /*border: 2px solid black;*/
-    background-color: lightgray;
+    background-color: gray;
     float: left;
     margin-left: 25%;
   }
